// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputTextField renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "flexDirection": "column",
      "gap": 5,
      "height": "auto",
      "marginHorizontal": 10,
      "marginVertical": 10,
    }
  }
>
  <Text
    style={
      {
        "color": "#346",
        "fontSize": 16,
        "marginBottom": 10,
      }
    }
  >
    Test Input
  </Text>
  <TextInput
    editable={true}
    onChangeText={[Function]}
    style={
      {
        "backgroundColor": "#fff",
        "borderColor": "#ccc",
        "borderRadius": 5,
        "borderWidth": 1,
        "color": "#666",
        "fontSize": 16,
        "height": 60,
        "padding": 10,
        "paddingVertical": 15,
      }
    }
    value=""
  />
</View>
`;

exports[`renders InputTextField correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "flexDirection": "column",
      "gap": 5,
      "height": "auto",
      "marginHorizontal": 10,
      "marginVertical": 10,
    }
  }
>
  <Text
    style={
      {
        "color": "#346",
        "fontSize": 16,
        "marginBottom": 10,
      }
    }
  />
  <TextInput
    editable={true}
    onChangeText={[Function]}
    style={
      {
        "backgroundColor": "#fff",
        "borderColor": "#ccc",
        "borderRadius": 5,
        "borderWidth": 1,
        "color": "#666",
        "fontSize": 16,
        "height": 60,
        "padding": 10,
        "paddingVertical": 15,
      }
    }
    value=""
  />
</View>
`;
